--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Train Search</title>
+    <script src="script.js"></script> <!-- Link to script.js -->
 </head>
 <body>
     <h1>Train Search</h1>
