--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Train Search</title>
     <script src="script.js"></script> <!-- Link to script.js -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Train Search</h1>
